<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.dashboard.DashboardFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/mostly_cloudy"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/weather_status_size"

                />

            <ImageView
                android:id="@+id/weather_status_img"
                android:layout_width="@dimen/weather_img_size"
                android:layout_height="@dimen/weather_img_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cloudy_sunny" />

            <TextView
                android:id="@+id/weather_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/weather_time_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/weather_time_size" />

            <TextView
                android:id="@+id/temp_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_25"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/temp_size"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/high_low_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h_27_l_18"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_medium"
                android:background="@drawable/background2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    tools:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/rain_img"
                        android:layout_width="@dimen/item_img_size"
                        android:layout_height="@dimen/item_img_size"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/rain" />

                    <TextView
                        android:id="@+id/rain_percent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_22"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rain_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rain"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    tools:layout_margin="@dimen/margin_medium">

                    <ImageView
                        android:id="@+id/wind_img"
                        android:layout_width="@dimen/item_img_size"
                        android:layout_height="@dimen/item_img_size"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/wind" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_km_h"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wind_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    tools:layout_margin="@dimen/margin_medium">

                    <ImageView
                        android:id="@+id/humidity_img"
                        android:layout_width="@dimen/item_img_size"
                        android:layout_height="@dimen/item_img_size"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/humidity" />

                    <TextView
                        android:id="@+id/humidity_percent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_18"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/humidity_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/today"
                    android:textColor="#DCA900"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="@dimen/margin_medium"/>

                <TextView
                    android:id="@+id/next_days_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_7_day"
                    android:textColor="@color/white"

                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginEnd="@dimen/margin_medium"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/today_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_medium"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>