<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/card_width"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:elevation="3dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hour_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/card_img"
            android:layout_width="@dimen/card_img_size"
            android:layout_height="@dimen/card_img_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/cloudy_sunny" />

        <TextView
            android:id="@+id/degree_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/_20"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>